--- a/Atividade02Flexbox2.0.html
+++ b/Atividade02Flexbox2.0.html
@@ -7,17 +7,36 @@
     <title>Atividade02Flexbox2.0</title>
     <link rel="stylesheet" href="Atividade02Flexbox2.0.css">
 </head>
+
 <body>
 
     <header>
         <h1>Atividade02Flexbox2.0 - Meu Flexbox</h1>
     </header>
-    <ul>
-        <li><a href="#">Página Inicial</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="#">Página Inicial</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>Seção 1</h2>
+            <p>Conteúdo da seção 1.</p>
+        </section>
+        <section>
+            <h2>Seção 2</h2>
+            <p>Conteúdo da seção 2.</p>
+        </section>
+        <section>
+            <h2>Seção 3</h2>
+            <p>Conteúdo da seção 3.</p>
+        </section>
+    </main>
+    <footer>
+        <p>Rodapé da página.</p>
+    </footer>
     
 </body>
 </html>
-
-
-
